requirements.xml fully translated performance-localization.xml fully translated copyrights.xml fixed tags inside xml element causing the tags to break manual.xml.in fixed hard coded strings dbstyle.css aligned the text to right
git-svn-id: http://framework.zend.com/svn/framework/standard/trunk@14162 44c647ce-9c0f-0410-b52a-842ac1e357ba

--- a/documentation/manual/he/html/dbstyle.css
+++ b/documentation/manual/he/html/dbstyle.css
@@ -1,7 +1,6 @@
 body {
     font-family: Tahoma, Arial, sans-serif;
-        direction:rtl;
-        text-align:right;
+	direction: rtl;
 }
 
 h1, h2, h3, h4, h5 {
@@ -36,6 +35,7 @@ pre.programlisting {
     padding: 0.1in;
     margin: 0.2in;
     clear: right;
+	direction: ltr;
 }
 
 pre.screen {
@@ -79,3 +79,4 @@ div.revinfo {
 code.code {
     font-family: "Lucida Console", monospace;
 }
+p { text-align: right;} 
